<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="225dp"
                        android:layout_height="148dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icon" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv1"
                        android:layout_width="255dp"
                        android:layout_height="48sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/cv2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="244dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv2"
                        android:layout_width="255dp"
                        android:layout_height="48sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/cv3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/editTextSurname"
                            android:layout_width="244dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/surname"
                            android:inputType="textPersonName"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv3"
                        android:layout_width="255dp"
                        android:layout_height="48sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/cv4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="244dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv4"
                        android:layout_width="255dp"
                        android:layout_height="48sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/cv5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="244dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv5"
                        android:layout_width="255dp"
                        android:layout_height="48sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="76dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toTopOf="@+id/cv6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.507"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/editTextConfirm"
                            android:layout_width="244dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/confirmPassword"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv6"
                        android:layout_width="105dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="80dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <Button
                            android:id="@+id/buttonRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="31dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@android:color/transparent"
                            android:text="@string/register"
                            android:textColor="@color/colorPrimary"
                            app:layout_constraintBottom_toTopOf="@+id/textView2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cv5" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="133dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:text="@string/RequiredFields"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>