...
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerHere">"Don't have an account? Register here!"</string>
    <string name="RequiredFields">All fields are required !</string>
    <string name="title_activity_display_photo">Photo display</string>
    <string name="Loading">Please wait &#8230;</string>
    <string name="show_routes">Show routes</string>
    <string name="Sight_Season">Sights by season</string>
    <string name="By_time">Sights by time</string>
...
