...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:id="@+id/textViewRegisterHere"
                        android:textColor="@android:color/white"
                        android:textStyle="italic"
                        android:layout_width="252dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
...
